# SlicerIDCBrowser

./: CMakeLists.txt  README.md
.github/: get_build_status.py  get_latest_index.py
.github/workflows/: check_extension_build_status.yml  update_release_attachment.yml
IDCBrowser/: CMakeLists.txt  IDCBrowser.py  IDCHandlerModule.py  IDCRequestHandler.py  IDCViewer.py  ViewIDCData.py
IDCBrowser/IDCBrowserLib/: IDCClient.py
IDCBrowser/Resources/: csv_index.sql  resolver.py
IDCBrowser/Resources/UI/: IDCBrowser.ui  IDCBrowserMain.ui
notebooks/: api_dev.ipynb
